# yew-testing

./: .gitignore  Cargo.toml  flake.nix  index.html  justfile
src/: app.rs  main.rs
