[package]
name = "yew-testing"
version = "0.1.0"
categories = ["gui", "wasm", "web-programming"]
edition = "2021"
keywords = ["yew", "trunk"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
description = "Template for starting a Yew project using Trunk"

[dependencies]
# yew = { version = "0.21", features = ["csr"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

# color-eyre = "0.6.3"
# eyre = "0.6.12"
# serde = { version = "1.0.204", features = ["derive"] }
# serde_json = "1.0.120"
# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
